--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "jquery": "^3.2.1",
     "mongodb": "^2.2.33",
     "mongojs": "^2.4.1",
     "pug": "^2.0.0-rc.4"
